MDEV-6041: ORDER BY+subqueries: subquery_table.key=outer_table.col is not recongized as binding - Make JOIN::const_key_parts include keyparts for which   the WHERE clause has an equality in form   "t.key_part=reference_outside_this_select" - This allows to avoid filesort'ing in some cases (and also   avoid a difficult choice between using filesort or using an index)